// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.steps;

option java_multiple_files = true;

enum SkipType {
  NOOP = 0;
  SKIP_TREE = 1;
  SKIP_NODE = 2;
}
